News UAT/force-app/main/default/objects/Question2__c/Question2__c.object-meta.xml
<CustomObject>
    <description>This is the Question used by the CS Campaign Brief Questionnaire code</description>
    <label>Question2</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>