News UAT/force-app/main/default/objects/Question2__c/fields/Answer_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Answer_Picklist_Values__c</fullName>
    <label>Answer Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>