News UAT/force-app/main/default/objects/Question2__c/fields/Answer_Type__c.field-meta.xml
<CustomField>
    <fullName>Answer_Type__c</fullName>
    <label>Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <label>Text (up to 255 characters)</label>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Long Text Area</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
                <isActive>false</isActive>
                <label>Percentage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>