News UAT/force-app/main/default/objects/Question2__c/fields/External_Question_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Question_ID__c</fullName>
    <description>External ID for the question</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID for the question</inlineHelpText>
    <label>External Question ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>