News UAT/force-app/main/default/objects/Question2__c/fields/Minimum_Length__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Length__c</fullName>
    <label>Minimum Length</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>