News UAT/force-app/main/default/objects/Question2__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertiser Details</fullName>
            </value>
            <value>
                <fullName>Campaign Goals</fullName>
            </value>
            <value>
                <fullName>Targeting</fullName>
            </value>
            <value>
                <fullName>Campaign Creatives</fullName>
            </value>
            <value>
                <fullName>Call Tracking</fullName>
            </value>
            <value>
                <fullName>Catchup TV (Display)</fullName>
            </value>
            <value>
                <fullName>Creative Assets</fullName>
            </value>
            <value>
                <fullName>Display Campaign</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>Marketplace Feed</fullName>
            </value>
            <value>
                <fullName>Programmatic Audio (Display)</fullName>
            </value>
            <value>
                <fullName>Programmatic Video (Display)</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Web Dev</fullName>
            </value>
            <value>
                <fullName>Website Essentials</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>